removed module nano-vaadin-v10 init, refactored V08-TB and V10-TB