@@ -1,11 +1,11 @@
 /**
  * Copyright © 2017 Sven Ruppert (sven.ruppert@gmail.com)
- *
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  * in compliance with the License. You may obtain a copy of the License at
- *
+ * <p>
  * http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  * Unless required by applicable law or agreed to in writing, software distributed under the License
  * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  * or implied. See the License for the specific language governing permissions and limitations under
@@ -13,28 +13,28 @@
  */
 package org.rapidpm.vaadin.addons.testbench.junit5.extensions.container;
 
-import static org.rapidpm.vaadin.addons.junit5.extensions.ExtensionFunctions.store;
-import static org.rapidpm.vaadin.addons.junit5.extensions.ExtensionFunctions.storeClass;
+import com.google.auto.service.AutoService;
+import org.junit.jupiter.api.extension.ExtensionContext;
+import org.springframework.boot.SpringApplication;
+import org.springframework.context.ApplicationContext;
+import org.springframework.core.annotation.AnnotationUtils;
+
 import java.lang.reflect.Method;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import org.junit.jupiter.api.extension.ExtensionContext;
-import org.springframework.boot.SpringApplication;
-import org.springframework.context.ApplicationContext;
-import org.springframework.core.annotation.AnnotationUtils;
-import com.google.auto.service.AutoService;
+
+import static org.rapidpm.vaadin.addons.junit5.extensions.ExtensionFunctions.store;
+import static org.rapidpm.vaadin.addons.junit5.extensions.ExtensionFunctions.storeClass;
 
 
 @AutoService(ContainerInitializer.class)
 public class SpringBootContainerInitializer implements ContainerInitializer {
   private static final String SPRING_BOOT_APPLICATION_CONTEXT = "spring-boot-applicationContext";
-  private static final String SPRING_BOOT_APP_CLASS = "spring-boot-app-class";
-  private static final String SPRING_BOOT_ARGS = "spring-boot-args";
+  private static final String SPRING_BOOT_APP_CLASS           = "spring-boot-app-class";
+  private static final String SPRING_BOOT_ARGS                = "spring-boot-args";
 
   @Override
   public void beforeAll(Class<?> testClass, ExtensionContext context) throws Exception {
@@ -49,18 +49,20 @@ public class SpringBootContainerInitializer implements ContainerInitializer {
     storeClass().apply(context).put(SPRING_BOOT_APP_CLASS, appClass);
 
     storeClass().apply(context).put(SPRING_BOOT_ARGS,
-        Collections.unmodifiableList(Arrays.asList(springBootConf.args())));
+                                    List.of(springBootConf.args())
+    );
 
   }
 
   private BiConsumer<ExtensionContext, ApplicationContext> storeApplicationContext() {
     return (context, springApplicationContext) -> store().apply(context)
-        .put(SPRING_BOOT_APPLICATION_CONTEXT, springApplicationContext);
+                                                         .put(SPRING_BOOT_APPLICATION_CONTEXT, springApplicationContext);
   }
 
   private Function<ExtensionContext, ApplicationContext> getApplicationContext() {
     return context -> store().apply(context).get(SPRING_BOOT_APPLICATION_CONTEXT,
-        ApplicationContext.class);
+                                                 ApplicationContext.class
+    );
   }
 
   private Consumer<ExtensionContext> removeApplicationContext() {
@@ -74,7 +76,7 @@ public class SpringBootContainerInitializer implements ContainerInitializer {
 
     List<String> argsWithoutPort =
         ((List<String>) storeClass().apply(context).get(SPRING_BOOT_ARGS, List.class)).stream()
-            .filter(arg -> !arg.startsWith("--server.port=")).collect(Collectors.toList());
+                                                                                      .filter(arg -> !arg.startsWith("--server.port=")).collect(Collectors.toList());
     argsWithoutPort.add("--server.port=" + port);
     Class<?> clazz = storeClass().apply(context).get(SPRING_BOOT_APP_CLASS, Class.class);
     ApplicationContext applicationContext =
@@ -87,7 +89,7 @@ public class SpringBootContainerInitializer implements ContainerInitializer {
   public void afterEach(Method testMethod, ExtensionContext context) throws Exception {
     ApplicationContext applicationContext = getApplicationContext().apply(context);
     SpringApplication.exit(applicationContext);
-    removeApplicationContext();
+    removeApplicationContext().accept(context);
     cleanUpPort(context);
     cleanUpIP(context);
   }
